--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="google-site-verification" content="1GT4gXP34jUn_zClyMAzcGySpjBiY77k3vfm90tmJ9A" />
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Andrinirina Henri Bienvenu</title>
